--- a/SOK.Web/Views/Home/Index.cshtml
+++ b/SOK.Web/Views/Home/Index.cshtml
@@ -53,6 +53,7 @@
                             <!-- Przyciski -->
                             <div class="flex flex-row md:flex-col md:self-stretch gap-2 w-full md:w-auto md:min-w-1/3">
                                 <a asp-controller="Print" asp-action="Day" asp-route-id="@Model.UpcomingDay.DayId"
+                                    target="_blank"
                                     class="grow btn btn-accent btn-soft text-lg font-medium md:w-full">
                                     <i class="bi bi-printer text-xl"></i>
                                     Drukuj plan
@@ -207,6 +208,7 @@
                                             </div>
                                             <div class="hidden md:flex flex-row gap-2 items-center justify-end">
                                                 <a asp-controller="Print" asp-action="Day" asp-route-id="@day.DayId"
+                                                    target="_blank"
                                                     class="btn btn-accent btn-soft">
                                                     <i class="bi bi-printer"></i>
                                                 </a>
