Kafelek ze zgłoszeniami na stronie głównej przy braku aktywnego planu Fixes #10

--- a/SOK.Web/Views/Home/Index.cshtml
+++ b/SOK.Web/Views/Home/Index.cshtml
@@ -348,7 +348,7 @@
     }
 
     <!-- Kafelek ze statystykami zgłoszeń (dla Admin, Priest, SubmitSupport) -->
-    @if (isAdminOrPriest || isSubmitSupport)
+    @if ((isAdminOrPriest || isSubmitSupport) && Model.SubmissionsStats is not null)
     {
         <div class="card bg-base-100 shadow-xl">
             <div class="card-body">
