--- a/SOK.Web/Views/Shared/_Header.cshtml
+++ b/SOK.Web/Views/Shared/_Header.cshtml
@@ -14,7 +14,7 @@
                         class="font-semibold">@Context.User.FindFirst("DisplayName")!.Value</span></span>
                 <i class="bi bi-person-circle text-xl"></i>
             </div>
-            <ul tabindex="0" class="dropdown-content menu bg-base-200 rounded-box z-[1] w-52 p-2 shadow-lg">
+            <ul tabindex="0" class="dropdown-content menu bg-base-200 rounded-box z-30 w-52 p-2 shadow-lg">
                 <li>
                     <div class="flex items-center justify-left">
                         <label class="swap swap-rotate">
