Złe ikonki w opcji motywu Fixes #9

--- a/SOK.Web/Views/Shared/_Header.cshtml
+++ b/SOK.Web/Views/Shared/_Header.cshtml
@@ -19,8 +19,8 @@
                     <div class="flex items-center justify-left">
                         <label class="swap swap-rotate">
                             <input type="checkbox" id="theme-toggle" />
-                            <i class="bi bi-sun-fill swap-off text-xl"></i>
-                            <i class="bi bi-moon-fill swap-on text-xl"></i>
+                            <i class="bi bi-moon-fill swap-off text-xl"></i>
+                            <i class="bi bi-sun-fill swap-on text-xl"></i>
                         </label>
                         <label for="theme-toggle" id="theme-label" class="cursor-pointer">
                             Tryb ciemny
