Zły opis w liście planów Fixes #7

--- a/SOK.Web/Views/PublicForm/SubmissionPanel.cshtml
+++ b/SOK.Web/Views/PublicForm/SubmissionPanel.cshtml
@@ -305,6 +305,8 @@
             SOK.Domain.Enums.SubmitMethod.WebForm => "Formularz internetowy",
             SOK.Domain.Enums.SubmitMethod.Phone => "Telefon",
             SOK.Domain.Enums.SubmitMethod.Stationary => "Osobiście",
+            SOK.Domain.Enums.SubmitMethod.Email => "Mailowo",
+            SOK.Domain.Enums.SubmitMethod.DuringVisits => "Podczas kolędy",
             _ => "Nieznany"
         };
     }
