Niewidoczny nagłówek w edytorze agendy Fixes #12

--- a/SOK.Web/Views/Calendar/AgendaEditor.cshtml
+++ b/SOK.Web/Views/Calendar/AgendaEditor.cshtml
@@ -190,7 +190,7 @@
             <label for="visits-drawer" class="drawer-overlay"></label>
             <div class="bg-base-100 w-full md:w-2/3 lg:w-1/2 min-h-full p-0 flex flex-col">
                 <!-- Nagłówek drawer -->
-                <div class="sticky top-0 z-30 bg-base-300 text-primary-content p-4 flex justify-between items-center">
+                <div class="sticky top-0 z-30 bg-base-300 text-base-content p-4 flex justify-between items-center">
                     <h3 class="text-xl font-bold">Dodaj wizyty</h3>
                     <button type="button" class="btn btn-sm btn-ghost btn-circle" @@click="closeDrawer">
                         <i class="bi bi-x-lg"></i>
