--- a/SOK.Web/Views/Plans/Index.cshtml
+++ b/SOK.Web/Views/Plans/Index.cshtml
@@ -121,7 +121,7 @@
                                     <div class="stat-figure text-primary">
                                         <i class="bi bi-inbox text-4xl"></i>
                                     </div>
-                                    <div class="stat-title">Wszystkie zgłoszenia</div>
+                                    <div class="stat-title">Zaplanowane wizyty</div>
                                     <div class="stat-value text-primary">@Model.ActivePlan.VisitsPlanned</div>
                                 </div>
                                 <div class="stat opacity-80">
