--- a/SOK.Web/Views/VisitControl/Index.cshtml
+++ b/SOK.Web/Views/VisitControl/Index.cshtml
@@ -11,7 +11,7 @@
     var buildingsJson = Newtonsoft.Json.JsonConvert.SerializeObject(Model.AvailableBuildings);
 }
 
-<div id="visit-control-app" class="max-h-screen bg-base-300 w-full flex flex-col overflow-y-hidden group">
+<div id="visit-control-app" class="max-h-dvh bg-base-300 w-full flex flex-col overflow-y-hidden group">
     <!-- Header -->
     <div class="fixed left-0 top-0 w-screen bg-base-200 border-b border-base-300 z-50">
         <div class="container mx-auto px-4 py-3">
